--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         margin-left: auto;
         margin-right: auto;
     }
+    
+    .leaflet-popup-content-wrapper .leaflet-popup-content {
+        font-family: "Times New Roman", Times, serif;
+    }
+
+    .leaflet-popup-tip-container {
+        
+    }
 </style>
 <head>
 	
