--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
     .leaflet-popup-tip-container {
         
     }
+    rect.background {
+      fill: white;
+    }
+
+    .axis {
+      shape-rendering: crispEdges;
+    }
+
+    .axis path,
+    .axis line {
+      fill: none;
+      stroke: #000;
+    }
 </style>
 <head>
 	
@@ -32,7 +45,6 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" integrity="sha512-07I2e+7D8p6he1SIM+1twR5TIrhUQn9+I6yjqD53JQjFiMf8EtC93ty0/5vJTZGF8aAocvHYNEDJajGdNx1IsQ==" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js" integrity="sha512-A7vV8IFfih/D732iSSKi20u/ooOfj/AGehOKq0f4vLT1Zr2Y+RX7C+w8A1gaSasGtRUZpF/NZgzSAu4/Gc41Lg==" crossorigin=""></script>
     <script src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="https://d3js.org/d3.v4.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 
 
@@ -51,6 +63,11 @@
 <script type="text/javascript" src="NFLmap.js"></script>
     
 <h4>Ranking scores based on: Coaching Staff, Fan Relations, Wins per Fan Dollar, Stadium Experience, and Success(Championships/dividion titles/wins in team history)</h4>
+
+<div id="filteredGraph" style="background-color: white; width: 1500px; height: 860px;">
+    <h1 style="color:black;">NFL Team's rating breakdown</h1>
+</div>
+<script type="text/javascript" src="filteredGraph.js"></script>
 
 
 
