My viz is working in its own html, still havent integrated and still making improvments to viz

--- a/index.html
+++ b/index.html
@@ -62,14 +62,12 @@
     
 <script type="text/javascript" src="NFLmap.js"></script>
     
-<h4>Ranking scores based on: Coaching Staff, Fan Relations, Wins per Fan Dollar, Stadium Experience, and Success(Championships/dividion titles/wins in team history)</h4>
+<h4>Ranking scores based on: Coaching Staff, Fan Relations, Wins per Fan Dollar, Stadium Experience, and Success(Championships/division titles/wins in team history)</h4>
 
 <div id="filteredGraph" style="background-color: white; width: 1500px; height: 860px;">
-    <h1 style="color:black;">NFL Team's rating breakdown</h1>
+    <h1 style="color:black;">NFL Team's Rating Breakdown</h1>
 </div>
 <script type="text/javascript" src="filteredGraph.js"></script>
-
-
 
 </body>
 </html>
