Added header in test.html

--- a/test.html
+++ b/test.html
@@ -60,6 +60,7 @@
 
 </head>
     <h1 id="header1">Attribute Breakdown</h1>
+    <h3 id="header1">Select an attribute from the dropdown box!</h3>
     
 <ul>
             <li><a href="index.html">Home</a></li>
